# xFasterTransformer

./: CMakeLists.txt
benchmark/: run.sh  run_benchmark.sh
microbench/: CMakeLists.txt  benchbase.cpp  benchbase.h  main.cpp  util.cpp  util.h  vexp.h
profile/: perf2trace.sh  profile.sh
src/models/: models.cpp
src/pytorch/: CMakeLists.txt
src/searchers/: beam_search.cpp  greedy_search.cpp  sample_search.cpp
src/utils/: CMakeLists.txt  perf.cpp  perf.h  shm_reduction.h  timeline.h
tests/ut/: CMakeLists.txt  timeline_test.cpp
